# suricatax80-ndpi5-plugin

./: Cargo.toml  README.md  build.rs
.github/workflows/: build-plugin.yml  release.yml
ndpi-sys/: Cargo.toml  README.md  build.rs
ndpi-sys/src/: bindings.rs  lib.rs
src/: lib.rs  ndpi.rs  plugin.c  suricata-compat.h  suricata.rs
